--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "fastify start app/server.js -l warn",
     "dev": "fastify start app/server.js -l info -w",
     "postinstall": "cd scripts && bash download-yt-dlp.sh && bash pip-install.sh",
-    "generate-local-cert": "cd scripts && bash generate-local-cert.sh",
+    "generate-dev-cert": "cd scripts && bash generate-dev-cert.sh",
+    "docgen": "cd scripts && bash docgen.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -40,6 +41,7 @@
     "forwarded": "^0.2.0",
     "ieee754": "^1.2.1",
     "ipaddr.js": "^1.9.1",
+    "jsdoc-to-markdown": "^7.1.1",
     "json-schema-traverse": "^1.0.0",
     "light-my-request": "^5.6.1",
     "lru-cache": "^6.0.0",
