--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 node_modules
-*.p12
-*.pem
 test.js
 .DS_Store
-app/data/*.json
-app/data/*.tsv
+.nyc_output
+
 yt-dlp
+
+*.p12
+*.pem
+
 app/tmp/*.pdf
 app/tmp/*.mp4
-public-keys.txt
+app/data/*.json
+app/data/*.tsv
+
+fixtures/data/*.tsv
