First implementation of IP rate limiting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "fastify start app/server.js -l warn",
-    "dev": "fastify start app/server.js -l info -w",
+    "dev": "fastify start app/server.js -l info -w -P",
     "postinstall": "cd scripts && bash download-yt-dlp.sh && bash pip-install.sh",
     "generate-dev-cert": "cd scripts && bash generate-dev-cert.sh",
     "docgen": "cd scripts && bash docgen.sh",
