--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         python-version: '3.10' 
 
     - name: Install system dependencies
-      run: sudo apt-get install -y bash gcc g++ python3-dev zlib1g zlib1g-dev libjpeg-dev libssl-dev libffi-dev ghostscript poppler-utils
+      run: sudo apt-get install -y bash gcc g++ python3-dev zlib1g zlib1g-dev libjpeg-dev libssl-dev libffi-dev poppler-utils
 
     - name: Install app dependencies
       run: npm install
